--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,10 @@ a:hover {
     height: 200px;
     min-height: 200px;
 }
+.page-header.header-smallest {
+    height: 200px;
+    min-height: 200px;
+}
 .header-image-credit {
 	margin: 50px 0 -100px 0;
 	position: relative;
