--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,9 @@ a:hover {
 .no-top-margin {
 	margin-top:0 !important;
 }
+.section-top {
+	padding-top:100px !important;
+}
 .row-deep {
 	margin-bottom:25px;
 }
