--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,11 @@ a:hover {
 		padding:0 15px 20px 0;
 		margin: 0 0 0 0px;
 	}
+	.main-raised {
+		margin: 0px;
+		padding: 0 15px;
+	}
+	
 }
 
 
