--- a/css/style.css
+++ b/css/style.css
@@ -71,15 +71,10 @@
        url('../fonts/roboto-slab-v7-latin-700.woff') format('woff');
 }
 
-p {
-	font-size: 16px;
-}
-a {
-	color:#1c8bed;
-}
-a:hover {
-	color:#16c462;
-}
+p { font-size: 16px; }
+a { color:#1c8bed; }
+a:hover { color:#16c462; }
+
 .vertical-text {
 	transform: rotate(90deg);
 	transform-origin: left top 0;
@@ -99,7 +94,6 @@ a:hover {
 .form-control, .is-focused .form-control {
     background-image: linear-gradient(to top, #16c462 2px, #9c27b000 2px), linear-gradient(to top, #d2d2d2 1px, #d2d2d200 1px);
 }
-
 .dark-primary-color    { background: #388E3C; }
 .default-primary-color { background: #4CAF50; }
 .light-primary-color   { background: #C8E6C9; }
@@ -108,7 +102,6 @@ a:hover {
 .primary-text-color    { color: #212121; }
 .secondary-text-color  { color: #757575; }
 .divider-color         { border-color: #BDBDBD; }
-
 
 .biotherm-heat-icon{
 	fill:#ec2024;
@@ -150,7 +143,6 @@ a:hover {
 .icon.icon-info {
     color: #4284c5;
 }
-
 .navbar-brand img {
 	padding:0 15px 20px 0;
 	margin: 0 0 0 -20px;
@@ -200,24 +192,6 @@ a:hover {
 	font-weight: 300;
 }
 
-@media (max-width: 767px) {
-	.dropdown-menu.multi-column {
-		min-width: 240px !important;
-		overflow-x: hidden;
-	}
-	.navbar-brand img {
-		padding:0 15px 20px 0;
-		margin: 0 0 0 0px;
-	}
-	.main-raised {
-		margin: 0px;
-		padding: 0 15px;
-	}
-	
-}
-
-
-
 .page-header.header-smaller {
     height: 500px;
     min-height: 500px;
@@ -265,6 +239,10 @@ footer .copyright {
      background: linear-gradient(60deg, #1c8bed, #65a4dc);
  }
 
+#toob-testimonial-carousel .card {
+	padding:20px 50px 10px;
+	min-height:400px;
+}
 
 .contactus-2 .map {
     width: 100%;
@@ -370,7 +348,25 @@ footer ul li a {
 	margin-top: 0
 }
 
-
+@media (max-width: 767px) {
+	.dropdown-menu.multi-column {
+		min-width: 240px !important;
+		overflow-x: hidden;
+	}
+	.navbar-brand img {
+		padding:0 15px 20px 0;
+		margin: 0 0 0 0px;
+	}
+	.main-raised {
+		margin: 0px;
+		padding: 0 15px;
+	}
+	#toob-testimonial-carousel .card {
+		padding:10px 20px;
+		min-height:350px;
+	}
+	
+}
 
 
 .ekko-lightbox{display:-ms-flexbox!important;display:flex!important;-ms-flex-align:center;align-items:center;-ms-flex-pack:center;justify-content:center;padding-right:0!important}.ekko-lightbox-container{position:relative}.ekko-lightbox-container>div.ekko-lightbox-item{position:absolute;top:0;left:0;bottom:0;right:0;width:100%}.ekko-lightbox iframe{width:100%;height:100%}.ekko-lightbox-nav-overlay{z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;display:-ms-flexbox;display:flex}.ekko-lightbox-nav-overlay a{-ms-flex:1;flex:1;display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;opacity:0;transition:opacity .5s;color:#fff;font-size:30px;z-index:1}.ekko-lightbox-nav-overlay a>*{-ms-flex-positive:1;flex-grow:1}.ekko-lightbox-nav-overlay a>:focus{outline:none}.ekko-lightbox-nav-overlay a span{padding:0 30px}.ekko-lightbox-nav-overlay a:last-child span{text-align:right}.ekko-lightbox-nav-overlay a:hover{text-decoration:none}.ekko-lightbox-nav-overlay a:focus{outline:none}.ekko-lightbox-nav-overlay a.disabled{cursor:default;visibility:hidden}.ekko-lightbox a:hover{opacity:1;text-decoration:none}.ekko-lightbox .modal-dialog{display:none}.ekko-lightbox .modal-footer{text-align:left}.ekko-lightbox-loader{position:absolute;top:0;left:0;bottom:0;right:0;width:100%;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center}.ekko-lightbox-loader>div{width:40px;height:40px;position:relative;text-align:center}.ekko-lightbox-loader>div>div{width:100%;height:100%;border-radius:50%;background-color:#fff;opacity:.6;position:absolute;top:0;left:0;animation:a 2s infinite ease-in-out}.ekko-lightbox-loader>div>div:last-child{animation-delay:-1s}.modal-dialog .ekko-lightbox-loader>div>div{background-color:#333}@keyframes a{0%,to{transform:scale(0);-webkit-transform:scale(0)}50%{transform:scale(1);-webkit-transform:scale(1)}}
