--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,10 @@ a:hover { color:#16c462; }
 .carousel {
 
 }
+#front-carousel {
+	margin: 0px 0;
+	padding: 20px 0;
+}
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
 	bottom: 230px;
@@ -230,7 +234,7 @@ a:hover { color:#16c462; }
 }
 /* Declare heights because of positioning of img element */
 .main-carousel-item {
-	height: 42rem;
+	height: 32rem;
 	background-color: #fff;
 }
 .main-carousel-item > img {
