--- a/css/style.css
+++ b/css/style.css
@@ -223,19 +223,24 @@ a:hover { color:#16c462; }
 .carousel {
 
 }
+h2.front-title {
+	
+}
+h3.front-title {
+	margin-top: 0 !important;
+}
 #front-carousel {
 	margin: 0px 0;
-	padding: 20px 0;
+	padding: 0px 0;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-	bottom: 230px;
+	bottom: 120px;
 	z-index: 10;
-
 }
 /* Declare heights because of positioning of img element */
 .main-carousel-item {
-	height: 32rem;
+	height: 500px;
 }
 
 .main-carousel-item:after {
@@ -248,8 +253,8 @@ a:hover { color:#16c462; }
 	right:0;
 	
 }
-.main-carousel-filter::before {
-    background: rgba(0, 0, 0, 0.7);
+.main-carousel-filter::after {
+    background: rgba(0, 0, 0, 0.4);
 }
 .carousel-background {
 	background: rgba(0, 0, 0, 0.5);
@@ -322,6 +327,7 @@ footer .copyright {
 }
 .product-card-list {
 	min-height:90px;
+	font-weight:bold;
 	list-style:none;
 	margin:0;
 	padding:0;
@@ -461,6 +467,10 @@ footer ul li a {
 	.navbar-brand img {
 		padding:0 15px 20px 0;
 		margin: 0 0 0 0px;
+	}
+	.carousel-caption {
+		bottom: 60px;
+		z-index: 10;
 	}
 	.main-raised {
 		margin: 0px;
