--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,9 @@ a:hover { color:#16c462; }
     border-color: #2b5580;
     box-shadow: 0 2px 2px 0 rgba(18, 88, 150, 0.14), 0 3px 1px -2px rgba(18, 88, 150, 0.2), 0 1px 5px 0 rgba(18, 88, 150, 0.12);
 }
+.bg-hydro {
+    background-color: #1c8bed !important;
+}
 .btn.btn-hydro:hover {
     box-shadow: 0 14px 26px -12px rgba(28, 139, 237, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(28, 139, 237, 0.2);
 }
@@ -327,7 +330,6 @@ footer .copyright {
 }
 .product-card-list {
 	min-height:90px;
-	font-weight:bold;
 	list-style:none;
 	margin:0;
 	padding:0;
